--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix = "0.12.0"
+actix-web = "3.3.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+uuid = { version = "0.6.5", features = ["v4", "serde"] }
+diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres"] }
+diesel_migrations = "1.4.0"
