--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres"] }
 diesel_migrations = "1.4.0"
+derive_more = "0.99.16"
+actix-rt = "2.3.0"
 
