--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,12 @@ actix = "0.10.0"
 actix-web = "3.3.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres"] }
+diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres", "chrono"] }
 diesel_migrations = "1.4.0"
 derive_more = "0.99.16"
 actix-rt = "2.3.0"
-toml = "0.5.8"
-
+dotenv = "0.15.0"
+chrono = { version = "0.4", features = ["serde"] }
+lazy_static = "1.4"
+r2d2 = "0.8"
+listenfd = "0.3"
