--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix = "0.10.0"
+actix = "0.12.0"
 actix-web = "3.3.2"
+actix-service = "2.0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres", "chrono"] }
@@ -19,3 +20,7 @@ chrono = { version = "0.4", features = ["serde"] }
 lazy_static = "1.4"
 r2d2 = "0.8"
 listenfd = "0.3"
+jwt = "0.15.0"
+hmac = "0.11.0"
+sha2 = "0.9.8"
+futures = "0.3.17"
