--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 actix = "0.12.0"
 actix-web = "3.3.2"
 actix-service = "2.0.1"
+actix-redis = { version = "0.9.2", features = ["web"] }
+actix-session = "0.4.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres", "chrono"] }
@@ -26,3 +28,4 @@ sha2 = "0.9.8"
 futures = "0.3.17"
 rand = "0.8.4"
 rust-argon2 = "0.8.3"
+
